@@ -1,9 +1,10 @@
 [proxy]
 
-; NTLM server to connect through
-;   If omitted, Px will exit immediately
-;   IP:port
-;   Hostname:port
+; NTLM server(s) to connect through. IP:port, hostname:port
+;   Multiple proxies can be specified comma separated. Px will iterate through
+;   and use the one that works. Required field unless --noproxy is defined. If
+;   remote server is not in noproxy list and proxy is undefined, Px will reject
+;   the request
 server =
 
 ; IP interface to listen on - default: 127.0.0.1
@@ -46,6 +47,11 @@ idle = 30
 
 ; Timeout in seconds for connections before giving up
 socktimeout = 5
+
+; Run in foreground when frozen or with pythonw.exe. 0 or 1, default: 0
+;   Px will attach to the console and write to it even though the prompt is
+;   available for further commands. CTRL-C in the console will exit Px
+foreground = 0
 
 ; Enable logging
 ;   Logs are written to the same directory that Px is run and are over-written on startup
